# LR1

./: .gitignore  CMakeLists.txt  array.cpp  main.cpp
C++/: CMakeLists.txt  Makefile
C++/include/: array.h  base.h  doubly_linked_list.h  doubly_list.h  forward_list.h  full_binary_tree.h  linked_list.h  queue.h  stack.h  tree.hpp
C++/src/: doubly_list.cpp  forward_list.cpp  main.cpp  queue.cpp  tree.cpp
Rust/: Cargo.toml
Rust/src/: main.rs
include/: array.h  forward_list.h
src/: array.cpp  doubly_list.cpp  forward_list.cpp  queue.cpp  queue.h  stack.cpp  tree.cpp  tree.h
